# CAMERA-MTF-BENCH

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/sections/: _config.yml  _toc.yml  index.md  section0_intro.md  section10_appendix.md  section1_system_overview.md  section2_siemens_vs_edge.md  section3_autofocus_metrics.md  section4_optical_bench.md  section5_software_modules.md  section6_manual_focus.md  section7_cli.md  section8_advanced_optics.md  section9_roadmap.md
scripts/: make_focus_stack.py
src/bench/: __main__.py  autofocus.py  cli.py  workflows.py  workflows_hardware.py
src/bench/gui/: streamlit_app.py
src/bench/instruments/: __init__.py  camera.py  opencv_camera.py  stage.py  stage_kinesis.py  visa_stage.py
src/bench/metrics/: __init__.py  contrast.py  mtf_siemens.py
src/bench/targets/: __init__.py  siemens.py
tests/: manual_af_dummy_camera.py  manual_af_siemens_stack.py
